# syllabus_to_ics_file_format

./: .gitignore  README.md  app.py  gpt.py  icsconverter.py  pyproject.toml  requirements.txt
static/: script.js  styles.css
templates/: index.html
