[tool.poetry]
name = "syllabus-to-ics-file-format"
version = "0.1.0"
description = ""
authors = ["Rami-Ismael <rami.m.ismael@gmail.com>"]
readme = "README.md"
packages = [{include = "syllabus_to_ics_file_format"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
